--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format": "prettier --write \"src/**/*.{js, jsx}\"",
     "lint": "eslint \"src/**/*.{js, jsx}\" --quiet",
     "dev": "parcel src/index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --env=jsdom",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -22,15 +23,21 @@
   "homepage": "https://github.com/Monijo/adopt_me#readme",
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@testing-library/react": "^13.3.0",
     "eslint": "8.13",
     "eslint-config-prettier": "8.5",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "parcel": "^2.4.1",
     "prettier": "^2.6.2"
   },
   "dependencies": {
+
+    "@babel/preset-react": "^7.18.6",
+    "@parcel/babel-preset": "^2.0.0-alpha.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0"
