--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "eslint-plugin-react": "^7.29.4",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
+    "jest-fetch-mock": "^3.0.3",
     "parcel": "^2.4.1",
     "prettier": "^2.6.2"
   },
   "dependencies": {
-
     "@babel/preset-react": "^7.18.6",
     "@parcel/babel-preset": "^2.0.0-alpha.2",
     "react": "^18.0.0",
@@ -45,5 +45,9 @@
   "browserslist": [
     "last 2 version",
     "not dead"
-  ]
+  ],
+ "jest": {
+   "automock": false,
+   "setupFiles": ["./src/setupJest.js"]
+ }
 }
